infra/kustomize/base/cluster-core/ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-monitoring-service
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  tls:
    - hosts:
        - monitoring.democracy-app.de
      secretName: democracy-monitoring-tls
  rules:
    - host: monitoring.democracy-app.de
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
